--- a/app/views/teams/_form.rhtml
+++ b/app/views/teams/_form.rhtml
@@ -17,13 +17,13 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<%= error_messages_for 'group' %>
+<%= error_messages_for 'team' %>
 
-<!--[form:group]-->
+<!--[form:team]-->
 <label for="team_name"><%= text_field 'team', 'name'  %>Name</label>
 <label for="team_private"><%= check_box 'team', 'private'  %><%= tooltip "Private", { :tooltip => 'Admins don\'t have access to this team' }, :class => 'mytooltip' %></label>
 <label for="team_visible"><%= check_box 'team', 'visible'  %>Visible to non-members</label>
 <label for="team_rootenc"><%= check_box 'team', 'noroot'  %><%= tooltip "No Root Encryption", { :tooltip => 'NOT EVEN ROOT CAN RESTORE YOUR DATA IF YOU LOSE YOUR PASSWORD' }, :class => 'mytooltip' %></label>
 <label for="team_description"><%= text_area 'team', 'description', options = {:cols => 35}  %>Description</label>
-<!--[eoform:group]-->
+<!--[eoform:team]-->
 
