Cryptopus is now ported to rails 2.0 with restfull urls and with some other basic cleanups

--- a/app/views/accounts/_show_menu.html.erb
+++ b/app/views/accounts/_show_menu.html.erb
@@ -1,7 +1,7 @@
-<li><%= get_back_to_list_button %></li>
+  <li><%= get_back_to_list_button %></li>
 </ul>
+
 <h2>Action</h2>
 <ul>
-<li><%= link_to image_tag( "edit.png" ) + " Edit", :action => 'edit', :id => @account %><li>
-<li><%= link_to image_tag( "move.png" ) + " Move", :action => 'move', :id => @account %></li>
-<li><%= link_to image_tag("add.png") + ' Add attachment', :action => 'new_attachment' %></li>
+  <li><%= link_to image_tag( "edit.png" ) + " Edit", [:edit, @team, @group, @account] %><li>
+  <li><%= link_to image_tag("add.png") + ' Add attachment', new_team_group_account_item_path(@team, @group, @account) %></li>
