--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -17,15 +17,18 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
   
-<h1>Accounts in group <%= @group_name %> for team <%= @team_name %></h1>
-  <table>
-    <% for account in @accounts %>
-      <tr class="<%= cycle('odd', 'even') %>">
-        <td><%= link_to image_tag( "encrypted_small.png" ) + " " + account.accountname, :action => 'show', :id => account %></td>
-        <td><%= account.description %></td>
-        <td><%= link_to image_tag("edit.png"), :action => 'edit', :id => account %></td>
-        <td><%= link_to image_tag("remove.png"), { :action => 'destroy', :id => account }, :confirm => 'Are you sure?', :method => :post %></td>
-      </tr>
-    <% end %>
-  </table>
+<h1>Accounts in group <%= @group.name %> for team <%= @team.name %></h1>
+
+<table>
+
+  <% for account in @accounts %>
+    <tr class="<%= cycle('odd', 'even') %>">
+      <td><%= link_to image_tag( "encrypted_small.png" ) + " " + account.accountname, [@team, @group, account] %></td>
+      <td><%= account.description %></td>
+      <td><%= link_to image_tag("edit.png"), [:edit, @team, @group, account] %></td>
+      <td><%= link_to image_tag("remove.png"), [@team, @group, account], :confirm => 'Are you sure?', :method => :delete %></td>
+    </tr>
+  <% end %>
+
+</table>
 
