--- a/app/views/login/newuser.html.erb
+++ b/app/views/login/newuser.html.erb
@@ -19,4 +19,4 @@
 
 <h1>Welcome to Cryptopus</h1>
 <p>we created a new keypair for you. Enjoy Cryptopus</p>
-<%= link_to 'Continue', :controller => 'groups', :action => 'list' %>
+<%= link_to 'Continue', :controller => 'teams', :action => 'index' %>
