--- a/app/views/groups/_show_menu.html.erb
+++ b/app/views/groups/_show_menu.html.erb
@@ -1,4 +1,4 @@
 </ul>
 <h2>Action</h2>
 <ul>
-<li><%= link_to 'Edit', :action => 'edit', :id => @group %></li>
+<li><%= link_to 'Edit', [:edit, @team, @group]%></li>
