--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -18,9 +18,5 @@
 -%>
 
 <h1>New group</h1>
-<% form_tag :action => 'new' do %>
-	<fieldset>
-  		<%= render :partial => 'form' %>
-  		<label for"submit"><%= submit_tag "Create" %></label>
-	</fieldset>
-<% end %>
+<% @submit_button_text = "Create" %>
+<%= render :partial => 'form' %>
