--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -18,9 +18,5 @@
 -%>
 
 <h1>Edit team</h1>
-<% form_tag :action => 'edit', :id => @team do %>
-	<fieldset>
-  			<%= render :partial => 'form' %>
-  			<label for="submit"><%= submit_tag 'Edit' %></label>
-	</fieldset>
-<% end %>
+<% @submit_button_text = "Update" %>
+<%= render :partial => 'form' %>
