--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,6 +22,7 @@
 <% if session[:uid] %>
 	<li>
       <%= link_to image_tag("exit.png") + " Logout", :controller => 'login', :action => 'logout' %>
+      <%= link_to image_tag("viewmag.png") + " Search", :controller => 'search' %>
     </li>
 	<%= render_menu %>
     <% if session[:uid] == "0" %>
