--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
   <title>Cryptopus</title>
   <%= stylesheet_link_tag 'cryptopus' %>
   <%= stylesheet_link_tag 'main_navigation' %>
+  <% if session[:uid] %>
+    <%= javascript_include_tag :defaults %>
+  <% end %>
 </head>
     
 <body>
