--- a/app/views/ldapsettings/index.html.erb
+++ b/app/views/ldapsettings/index.html.erb
@@ -18,9 +18,5 @@
 -%>
 
 <h1>Edit LDAP settings</h1>
-<% form_tag :action => 'edit', :id => @ldapsetting do %>
-	<fieldset>
-  		<%= render :partial => 'form' %>
-  		<label for="submit"><%= submit_tag 'Save' %></label>
-	</fieldset>
-<% end %>
+<% @submit_button_text = "Update" %>
+<%= render :partial => 'form' %>
