New admin section for classes where only root and users with the admin flag have access. Moved the Ldapsettings controller and his views to this new admin section.

--- a/app/views/admin/ldapsettings/_form.html.erb
+++ b/app/views/admin/ldapsettings/_form.html.erb
@@ -18,7 +18,7 @@
 -%>
 
 <!--[form:ldapsetting]-->
-<% form_for( @ldapsetting ) do |f| %>
+<% form_for( [:admin, @ldapsetting] ) do |f| %>
   <%= f.error_messages %>
 
   <%= f.text_field :basename %>
