--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,5 +1,6 @@
+<%
 # $Id$
-
+#
 # Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
 #
 # This program is free software; you can redistribute it and/or modify
@@ -14,7 +15,8 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
+-%>
 
-class User < ActiveRecord::Base
-  has_many :teammembers, :dependent => :destroy
-end
+<h1>Editing user</h1>
+<% @submit_button_text = "Update" %>
+<%= render :partial => 'form' %>
