--- a/app/views/admin/ldapsettings/_form.html.erb
+++ b/app/views/admin/ldapsettings/_form.html.erb
@@ -21,17 +21,17 @@
 <% form_for( [:admin, @ldapsetting] ) do |f| %>
   <%= f.error_messages %>
 
+  <%= f.label :basename %>
   <%= f.text_field :basename %>
-  <%= f.label :basename %><br/>
 
+  <%= f.label :hostname %>
   <%= f.text_field :hostname %>
-  <%= f.label :hostname %><br/>
 
+  <%= f.label :portnumber %>
   <%= f.text_field :portnumber %>
-  <%= f.label :portnumber %><br/>
 
+  <%= f.label :encryption %>
   <%= f.select("encryption", { 'none' => "none", 'SSL/TLS' => "simple_tls" }) %>
-  <%= f.label :encryption %><br/>
 
   <%= f.submit @submit_button_text %>
 <% end %>
