--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -25,14 +25,14 @@
     <th colspan="3">Actions</th>
   </tr>
 
-  <% @team_list.each do |team_id, data| %>
+  <% @teams.each do |team| %>
     <tr class="<%= cycle( 'odd', 'even' ) %>">
-    <td><%= link_to image_tag( "kontact_contacts.png" ) + " " + %Q{#{data[:team].name}}, team_groups_path( data[:team] ) %></td>
-    <td><%= data[:team].description %></td>
+    <td><%= link_to image_tag( "kontact_contacts.png" ) + " " + %Q{#{team.name}}, team_groups_path( team ) %></td>
+    <td><%= team.description %></td>
 
-    <% if data[:admin] == true %>
-      <td><%= link_to image_tag( "edit.png" ), edit_team_path( data[:team] ) %></td>
-      <td><%= link_to image_tag( "remove.png" ), data[:team], :confirm => 'Are you sure?', :method => :delete %></td>
+    <% if team.teammembers.find_by_user_id( @user.id ).team_admin == true %>
+      <td><%= link_to image_tag( "edit.png" ), edit_team_path( team ) %></td>
+      <td><%= link_to image_tag( "remove.png" ), team, :confirm => 'Are you sure?', :method => :delete %></td>
     
     <% else %>
       <td></td>
