Moved the autologoff notification to the upper right corner with a fixed position.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,17 @@
 <body>
   <div id="wrap">
 
+    
     <div id="header">
       <%= image_tag("cryptopus_top.png") %>
     </div>
+
+  
+    <% if session[:uid] %>
+      <div id="countdownWrapper">
+        Autologoff: <span id='countdown' >000</span>
+      </div>
+    <% end %>
     
     <div id="main">
 
