corrected orthography on welcome page

--- a/app/views/login/newuser.html.erb
+++ b/app/views/login/newuser.html.erb
@@ -18,5 +18,5 @@
 -%>
 
 <h1>Welcome to Cryptopus</h1>
-<p>we created a new keypair for you. Enjoy Cryptopus</p>
+<p>We created a new keypair for you. Enjoy Cryptopus.</p>
 <%= link_to 'Continue', :controller => 'teams', :action => 'index' %>
