--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -31,8 +31,7 @@
   <%= tooltip "Visible", { :tooltip => 'Visible to non-members' }, :class => 'mytooltip' %>
   <%= f.check_box :visible %>
 
-  <%= tooltip "No Root", { :tooltip => 'NOT EVEN ROOT CAN RESTORE YOUR DATA IF YOU LOSE
-    YOUR PASSWORD' }, :class => 'mytooltip' %>
+  <%= tooltip "No Root", { :tooltip => 'NOT EVEN ROOT CAN RESTORE YOUR DATA IF YOU LOOSE YOUR PASSWORD!' }, :class => 'mytooltip' %>
   <%= f.check_box :noroot %>
 
   <%= f.label :description %>
