--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -69,5 +69,5 @@
 </table>
 
 <ul>
-	<li><%= link_to image_tag("add_user.png") + " Add user", new_team_teammember_path(@team) %></li>
+	<li><%= link_to image_tag("add_user.png") + " Add member", new_team_teammember_path(@team) %></li>
 </ul>
