renamed "edit"-button to "update"

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -18,5 +18,5 @@
 -%>
 
 <h1>Editing group</h1>
-<% @submit_button_text = "Edit" %>
+<% @submit_button_text = "Update" %>
 <%= render :partial => 'form' %>
