--- a/app/views/admin/recryptrequests/_form.html.erb
+++ b/app/views/admin/recryptrequests/_form.html.erb
@@ -1,3 +1,4 @@
+<%
 # $Id$
 
 # Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
@@ -14,7 +15,10 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
+-%>
 
-class Recryptrequest < ActiveRecord::Base
-  belongs_to :user
-end
+<%= error_messages_for 'recryptrequest' %>
+
+<!--[form:recryptrequest]-->
+<!--[eoform:recryptrequest]-->
+
