--- a/app/views/admin/recryptrequests/index.html.erb
+++ b/app/views/admin/recryptrequests/index.html.erb
@@ -1,3 +1,4 @@
+<% 
 # $Id$
 
 # Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
@@ -14,7 +15,33 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
+-%>
 
-class Recryptrequest < ActiveRecord::Base
-  belongs_to :user
-end
+<h1>Re-encryption requests</h1>
+<table>
+  <tr>
+    <th>User</th>
+    <th>Admin required</th>
+    <th>Root required</th>
+    <th>Actions</th>
+  </tr>
+    
+  <% for recryptrequest in @recryptrequests %>
+    <tr>
+      <td><%= LdapTools.getLdapInfo( User.find( recryptrequest.user_id ).uid.to_s, "cn" ) %></td>
+      <% if recryptrequest.adminrequired == true %>
+        <td>Yes</td>
+      <% else %>
+        <td>No</td>
+      <% end %>
+      <% if recryptrequest.rootrequired == true %>
+        <td>Yes</td>
+      <% else %>
+        <td>No</td>
+      <% end %>
+      <td><%= link_to image_tag( "remove.png" ), recryptrequest, :method => :delete %></td>
+    </tr>
+  <% end %>
+
+</table>
+
