--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -27,10 +27,15 @@
 
   <% @teams.each do |team| %>
     <tr class="<%= cycle( 'odd', 'even' ) %>">
-    <td><%= link_to image_tag( "kontact_contacts.png" ) + " " + %Q{#{team.name}}, team_groups_path( team ) %></td>
+    <% teammember = team.teammembers.find_by_user_id( @user.id ) %>
+    <% unless teammember.locked %>
+      <td><%= link_to image_tag( "kontact_contacts.png" ) + " " + %Q{#{team.name}}, team_groups_path( team ) %></td>
+    <% else %>
+      <td><%= image_tag( "kontact_contacts.png" ) + " " + %Q{#{team.name}} + " [LOCKED]" %></td>
+    <% end %>
     <td><%= team.description %></td>
 
-    <% if team.teammembers.find_by_user_id( @user.id ).team_admin == true %>
+    <% if teammember.team_admin == true %>
       <td><%= link_to image_tag( "edit.png" ), edit_team_path( team ) %></td>
       <td><%= link_to image_tag( "remove.png" ), team, :confirm => 'Are you sure?', :method => :delete %></td>
     
