Display last login date on recrypt request to give the user an idea what the old password was

--- a/app/views/recryptrequests/new.html.erb
+++ b/app/views/recryptrequests/new.html.erb
@@ -23,6 +23,12 @@
     Your LDAP Password has changed until you last logged in.<br/>
     Please enter your old LDAP Passwort to decrypt your Private_key.</p>
   </p>
+
+  <% if @user.last_login_at %>
+    <p>
+      Your last login was <%= time_ago_in_words @user.last_login_at %> ago.
+    </p>
+  <% end %>
   
   <p>
     <label for="old_password">
