fixed a bug in the recrypt request list

--- a/app/views/admin/recryptrequests/index.html.erb
+++ b/app/views/admin/recryptrequests/index.html.erb
@@ -28,7 +28,7 @@
     
   <% for recryptrequest in @recryptrequests %>
     <tr>
-      <td><%= LdapTools.getLdapInfo( User.find( recryptrequest.user_id ).uid.to_s, "cn" ) %></td>
+      <td><%= LdapTools.get_ldap_info( User.find( recryptrequest.user_id ).uid.to_s, "cn" ) %></td>
       <% if recryptrequest.adminrequired == true %>
         <td>Yes</td>
       <% else %>
